Replace damage absorption attributes with absorb_attack_damage ability, add absorptionChance config option